	 specplus3.c,tc2048.c},periph.c: move specification of if1 ports into
	 if1.c (Stuart).
20071122 machines/{pentagon.c,pentagon1024.c,scorpion.c}: remove redundant
	 *_select_ff_read() functions (Stuart).
20071123 fuse.c,machines/{Makefile.am,machines.h,pentagon.c,pentagon512.c,
         pentagon1024.c},menu.c,menu_data.dat,settings.dat,settings.pl:
         separate Pentagon variants ROM images and change settings to refer
         to beta rather than trdos (patch #1833435) (Fred).
20071124 machines/pentagon512.c: fix file mode (thanks, Phil) (Fred).
20071124 machines/pentagon512.c: spec128_memoryport_write has the same port
         and mask as the 128k Pentagon (thanks, Q-Master) (Fred).
20071124 disk/{plusd.c,beta.c}: add support for +D snapshots and mark beta as
         active when saving Pentagon and Scorpion snapshots (patch #1782512)
         (Fred).
20071126 ui/gtk/pokefinder.c: display an error message if the search value is
	 invalid (Stuart).
20071126 machines/pentagon1024.c: fix Betadisk (fixes bug #1838612) (Q-Master).
20071126 machines/pentagon1024.c: remove duplicate functions (thanks, Q-Master)
         (bug #1838612) (Fred).
20071126 machines/{Makefile.am,machines.h,pentagon.[ch],pentagon1024.c,
	 pentagon512.c,scorpion.c}: share peripherals array for Pentagon 128
	 and Pentagon 512, and move Pentagon-specific declarations into
	 pentagon.h (Stuart).
20071126 machines/scorpion.c: remove duplicate function (Stuart).
20071126 machines/{pentagon.[ch],pentagon1024.c,scorpion.c}: fix Pentagon and
	 Scorpion unattached port and port 0xff handling (thanks, Q-Master)
	 (Stuart).
20071127 ui/gtk/binary.c: validate the length and start fields, and allow a
	 length of 65536 to be used (fixes bug #1715764) (Stuart).
20071128 ChangeLog: update.
20071128 ChangeLog: tidy up (Stuart).
20071128 profile.c: close the file after writing, and open it in text mode
	 (Stuart).
20071202 man/fuse.1: cleanups (Stuart).