@@ -49,6 +49,7 @@ static module_info_t profile_module_info = {
 
   NULL,
   NULL,
+  NULL,
   profile_from_snapshot,
   NULL,
 
